# sparkreel

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
config/: default.yaml
docs/: AWS部署架構.md  proposal.html  使用者流程.md  成效衡量.md  提案大綱.md  架構設計.md
examples/: make_sample.py  sample_chat.jsonl  sample_stream.srt
scripts/: demo.sh
src/sparkreel/: __init__.py  batch.py  cli.py  config.py  log.py  mcp_server.py  metrics.py  models.py  pipeline.py  sample.py
src/sparkreel/aws/: __init__.py  clients.py
src/sparkreel/editing/: __init__.py  broll_gen.py  captions.py  engine.py  enhance.py  narrative.py
src/sparkreel/fusion/: __init__.py  scorer.py  segment.py  virality.py
src/sparkreel/ingest/: __init__.py  chat.py  media.py  subtitles.py  web.py
src/sparkreel/moderation/: __init__.py  compliance.py
src/sparkreel/signals/: __init__.py  audio.py  base.py  chat_sentiment.py  dsp.py  lexicon.py  speech.py  visual.py
src/sparkreel/styles/: __init__.py  platforms.py
src/sparkreel/web/: __init__.py  agent.py  app.py  console.py
src/sparkreel/web/static/: console.html  index.html  studio.html
tests/: test_agent.py  test_broll_gen.py  test_core.py  test_enhance.py  test_integration.py  test_mcp.py  test_narrative.py  test_segment.py  test_virality.py  test_visual_fer.py
